...
  <string name="task_with_steps_saved_message">Zadanie szczególowe zapisane</string>
  <string name="step_removed_message">Składowa zadania została usunięta</string>
  <string name="step_saved_message">Składowa zadania została zapisana</string>
  <string name="steps_reordered_message">Kolejność elementów została zapisana</string>
  <string name="task_reordered_message">Kolejność elementów została zapisana</string>
  <string name ="search">Wyszukaj</string>
  <string name="create_plan_tasks_list_info_type_1">Krok 2.1: Dodaj zadania i ustaw je w odpowiedniej kolejności</string>
  <string name="create_plan_tasks_list_info_type_2">Krok 2.1: Dodaj nagrody i ustaw je w odpowiedniej kolejności</string>
  <string name="create_plan_tasks_list_info_type_3">Krok 2.1: Dodaj interakcje i ustaw je w odpowiedniej kolejności</string>
  <string name="create_plan_add_tasks_type_1">Dodaj zadania</string>
  <string name="create_plan_add_tasks_type_2">Dodaj nagrody</string>
  <string name="create_plan_add_tasks_type_3">Dodaj interakcje</string>
  <string name="create_plan_add_tasks">Dodaj zadania</string>
  <string name="create_plan_add_prizes">Dodaj tablicę wyboru nagród</string>
  <string name="create_plan_add_interactions">Dodaj interakcje w planie dnia</string>
  <string name="create_plan_add_tasks_info_type_1">Krok 2.2: Wybierz zadania, które chcesz dodać do planu</string>
  <string name="create_plan_add_tasks_info_type_2">Krok 2.2: Wybierz nagrody, które chcesz dodać do planu</string>
  <string name="create_plan_add_tasks_info_type_3">Krok 2.2: Wybierz interakcje, które chcesz dodać do planu</string>
...
