...
  <FrameLayout
    android:id="@+id/plan_menu"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"/>

  <FrameLayout
    android:id="@+id/plan_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

</LinearLayout>
